--- a/calculators/blazingAura.html
+++ b/calculators/blazingAura.html
@@ -13,7 +13,7 @@
             <button id="themeToggle">🌑</button>
         </div>
         <label for="blazeRods">What is your Blaze Rod <img src="minionProduction/images/minions/combat/blaze.png" style="height: 1.3em; vertical-align: middle;"> collection?</label>
-        <input type="number" id="blazeRods" placeholder="Enter number" min="0">
+        <input type="number" id="blazeRods" placeholder="Enter number" min="0" oninput="enforceBounds(this)">
         <button onclick="calculateDamage()">Calculate</button>
         <div class="result" id="result">
             Base maximum damage: 500 <img src="images/damage.png" style="height: 1.1em; vertical-align: middle;">
@@ -31,6 +31,19 @@
         <ul><img src="minionProduction/images/minions/combat/blaze.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/blazingAura.html">Blazing Aura</a> • <img src="minionProduction/images/minions/mining/emerald.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/emeraldArmor.html">Emerald Armor</a> • <img src="images/coin.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/emeraldBlade.html">Emerald Blade</a> • <img src="images/exp.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/experience.html">Experience</a> • <img src="minionProduction/images/categories/mining.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/minionProduction/minionProduction.html">Minion Production</a> • <img src="images/exp.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/petLevel.html">Pet Level</a> • <img src="minionProduction/images/minions/foraging/oak.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/raiderAxe.html">Raider Axe</a> • <img src="minionProduction/images/minions/combat/zombie.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/zombieBulwark.html">Zombie Bulwark</a></ul>
     </div>
     <script>
+        function enforceBounds(input) {
+            const min = parseInt(input.min, 10);
+            const max = parseInt(input.max, 10);
+            const value = parseInt(input.value, 10);
+        
+            // Ensure value stays within bounds
+            if (value < min) {
+                input.value = min;
+            } else if (value > max) {
+                input.value = max;
+            }
+        }
+
         function calculateDamage() {
             const blazeRods = parseInt(document.getElementById('blazeRods').value) || 0;
             const maxBlazeRods = 225000;
