--- a/calculators/experience.html
+++ b/calculators/experience.html
@@ -13,13 +13,13 @@
             <button id="themeToggle">🌑</button>
         </div>
         <label for="currentLevel">What is your XP <img src="images/exp.png" style="height: 1.3em; vertical-align: middle;"> level?</label>
-        <input type="number" id="currentLevel" min="0" placeholder="Enter number">
+        <input type="number" id="currentLevel" min="0" oninput="enforceBounds(this)" placeholder="Enter number">
 
         <label for="targetLevel">What is your target XP <img src="images/exp.png" style="height: 1.3em; vertical-align: middle;"> level?</label>
-        <input type="number" id="targetLevel" min="0" placeholder="Enter number">
+        <input type="number" id="targetLevel" min="0" oninput="enforceBounds(this)" placeholder="Enter number">
 
         <label for="enchantingLevel">What is your Enchanting <img src="images/enchanting_table.png" style="height: 1.3em; vertical-align: middle;"> skill level?</label>
-        <input type="number" id="enchantingLevel" min="0" max="50" placeholder="Enter number">
+        <input type="number" id="enchantingLevel" min="0" oninput="enforceBounds(this)" max="50" placeholder="Enter number">
 
         <button onclick="calculateXPRequirements()">Calculate</button>
 
@@ -30,6 +30,19 @@
         <ul><img src="minionProduction/images/minions/combat/blaze.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/blazingAura.html">Blazing Aura</a> • <img src="minionProduction/images/minions/mining/emerald.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/emeraldArmor.html">Emerald Armor</a> • <img src="images/coin.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/emeraldBlade.html">Emerald Blade</a> • <img src="images/exp.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/experience.html">Experience</a> • <img src="minionProduction/images/categories/mining.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/minionProduction/minionProduction.html">Minion Production</a> • <img src="images/exp.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/petLevel.html">Pet Level</a> • <img src="minionProduction/images/minions/foraging/oak.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/raiderAxe.html">Raider Axe</a> • <img src="minionProduction/images/minions/combat/zombie.png" style="height: 1.1em; vertical-align: middle;"> <a href="https://peawies.github.io/CraftersMC-Calculators/calculators/zombieBulwark.html">Zombie Bulwark</a></ul>
     </div>
     <script>
+        function enforceBounds(input) {
+            const min = parseInt(input.min, 10);
+            const max = parseInt(input.max, 10);
+            const value = parseInt(input.value, 10);
+        
+            // Ensure value stays within bounds
+            if (value < min) {
+                input.value = min;
+            } else if (value > max) {
+                input.value = max;
+            }
+        }
+        
         function calculateXP(level) {
             if (level <= 16) {
                 return level * level + 6 * level;
