--- a/calculators/minionProduction/minionProduction.html
+++ b/calculators/minionProduction/minionProduction.html
@@ -162,6 +162,6 @@
 </div>
 <br>
     <div class="result" id="result"></div>
-    <script src="calculator.js"></script>
+    <script src="minionProduction.js"></script>
 </body>
 </html>
