--- a/calculators/minionProduction/minionProduction.html
+++ b/calculators/minionProduction/minionProduction.html
@@ -27,7 +27,7 @@
     </script>
 
     <div class="container">
-        <button id="dark-mode-toggle" class="toggle-button">🌙</button>
+        <button id="dark-mode-toggle" class="toggle-button">☀️</button>
         <h1>Minion Production Calculator</h1>
         <h2>Developed by Peaw | Improved by Ndr</h2>
         <hr>
