Add Techon to credits

--- a/calculators/minionProduction/minionProduction.html
+++ b/calculators/minionProduction/minionProduction.html
@@ -29,7 +29,7 @@
     <div class="container">
         <button id="dark-mode-toggle" class="toggle-button">☀️</button>
         <h1>Minion Production Calculator</h1>
-        <h2>Developed by Peaw | Improved by Ndr</h2>
+        <h2>Developed by Peaw | Improved by Ndr, Techon</h2>
         <hr>
         <h3>Minion Type:</h3>
         <div class="tab">
