Changed tier buttons to slider

--- a/calculators/minionProduction/minionProduction.html
+++ b/calculators/minionProduction/minionProduction.html
@@ -109,21 +109,23 @@
 
 
     <h3>Minion Tiers:</h3>
-<!-- Tiers 1-11 -->
-<div class="button-group" id="tierButtons">
-  <button class="buttonselect" data-value="1" title="Tier 1" style="background-image: url('images/tier/1.png')"></button>
-  <button class="buttonselect" data-value="2" title="Tier 2" style="background-image: url('images/tier/2.png')"></button>
-  <button class="buttonselect" data-value="3" title="Tier 3" style="background-image: url('images/tier/3.png')"></button>
-  <button class="buttonselect" data-value="4" title="Tier 4" style="background-image: url('images/tier/4.png')"></button>
-  <button class="buttonselect" data-value="5" title="Tier 5" style="background-image: url('images/tier/5.png')"></button>
-  <button class="buttonselect" data-value="6" title="Tier 6" style="background-image: url('images/tier/6.png')"></button>
-  <button class="buttonselect" data-value="7" title="Tier 7" style="background-image: url('images/tier/7.png')"></button>
-  <button class="buttonselect" data-value="8" title="Tier 8" style="background-image: url('images/tier/8.png')"></button>
-  <button class="buttonselect" data-value="9" title="Tier 9" style="background-image: url('images/tier/9.png')"></button>
-  <button class="buttonselect" data-value="10" title="Tier 10" style="background-image: url('images/tier/10.png')"></button>
-  <button class="buttonselect" data-value="11" title="Tier 11" style="background-image: url('images/tier/11.png')"></button>
+<div class="tier-slider-container">
+    <input type="range" id="tierSlider" min="1" max="11" value="1" step="1">
+    <div class="roman-numerals">
+        <span>I</span>
+        <span>II</span>
+        <span>III</span>
+        <span>IV</span>
+        <span>V</span>
+        <span>VI</span>
+        <span>VII</span>
+        <span>VIII</span>
+        <span>IX</span>
+        <span>X</span>
+        <span>XI</span>
+    </div>
 </div>
-
+<br>
 
 <h3>Fuel Type:</h3>
 <!-- Fuel Types -->
