dark-mode => light-mode

--- a/calculators/minionProduction/minionProduction.html
+++ b/calculators/minionProduction/minionProduction.html
@@ -41,7 +41,7 @@
 <body>
 
     <div class="container">
-        <button id="dark-mode-toggle" class="toggle-button">☀️</button>
+        <button id="light-mode-toggle" class="toggle-button">☀️</button>
             <h1>Minion Production Calculator has moved</h1>
             <p>You will be automatically redirected. </p>
             <a href="index.html" class="button">Not working? Click go to the new page</a>
