--- a/calculators/minionProduction/index.html
+++ b/calculators/minionProduction/index.html
@@ -27,7 +27,7 @@
     </script>
 
     <div class="container">
-        <button id="dark-mode-toggle" class="toggle-button">☀️</button>
+        <button id="light-mode-toggle" class="toggle-button">☀️</button>
         <h1>Minion Production Calculator</h1>
         <h2>Developed by Peaw | Improved by Ndr, Techon</h2>
         <hr>
