--- a/index.html
+++ b/index.html
@@ -3,58 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Tools Homepage</title>
+    <title>CraftersMC Calculators</title>
     <link rel="stylesheet" href="home.css">
     <script type="text/javascript" src="lightmodeHome.js" defer></script><!-- note to peaw: DO NOT REMOVE DEFER OR IT WILL BREAK TY - techon -->
 </head>
 <body>
     <header>
         <h1>CraftersMC Calculators</h1>
-        <p>Find a range of calculators made by Peawies. </p>
-        <p style="font-size: 0.5rem;">Made by Peawies/Peawio. Minion calculator interface improved by Ndr and TechonTheDev. Homepage by TechonTheDev</p>
+        <p>Calculate various things for CraftersMC SkyBlock!</p>
+        <p style="font-size: 0.5rem;">Developed by Peaw | Improved by TechonTheDev</p>
     </header>
     <button id="themeToggle"><span>🌑</span><span>☀️</span></button>
     <div class="container">
         <div class="card">
+            <h2>MOST USED</h2>
             <img src="calculators/minionProduction/images/compactor/yes.png" alt="Calculator Tool">
             <h3>Minion Calculator</h3>
-            <p>Perform basic and advanced calculations with ease.</p>
+            <p>Perform basic and advanced minion calculations with ease.</p>
             <a href="calculators/minionProduction/">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/Emerald_Chestplate.png" alt="Emerald Armor Ability Calculator" style="image-rendering:initial;"><!--img from wiki lol-->
             <h3>Emerald Armor Ability Calculator</h3>
-            <p>Find out how much bonus health you will get from the emerald armour ability "tank" depending on your emerald collection</p>
+            <p>Find out how much bonus Health you will get from the ability of Emerald Armor depending on your Emerald collection.</p>
             <a href="calculators/emeraldArmor.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/Emerald_Blade.png" alt="Emerald blade">
             <h3>Emerald Blade Damage Calculator</h3>
-            <p>Find out how much damage you will deal from the emerald blade depending on the amount of coins in your purse</p>
+            <p>Find out how much bonus Damage you will get from the ability of Emerald Blade depending on the amount of coins in your purse.</p>
             <a href="calculators/emeraldBlade.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/exp.png" alt="EXP Calculator">
             <h3>Experience Calculator</h3>
-            <p>Calculate how much XP you need to get a certain level</p>
+            <p>Calculate how much XP you need to get a certain level (vanilla XP).</p>
             <a href="calculators/experience.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/Ultimate_Beetroot_Candy.png" alt="Pet level Calculator">
             <h3>Pet Level Calculator</h3>
-            <p>Calculate how much pet xp you need for your pet to get to your desired level</p>
+            <p>Calculate how much pet XP you need for your pet to get to your target level.</p>
             <a href="calculators/petLevel.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/raiderAxe.png" alt="Raider axe Calculator">
             <h3>Raider Axe Calculator</h3>
-            <p>Calculate the amount of strength for your raider axe using your wood collections</p>
+            <p>Find out how much bonus Strength you will get from the ability of Raider Axe depending on your wood collections.</p>
             <a href="calculators/experience.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/Zombie_Chestplate.png" alt="Zombie bulwark">
             <h3>Zombie Armor Calculator</h3>
-            <p>Calculate how much defense you will get from the zombie armor ability "Zombie Bulwark"</p>
+            <p>Calculate how much defense you will get from the ability of Zombie Armor.</p>
             <a href="calculators/zombieBulwark.html">Open Tool</a>
         </div>
     </div>
