--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button id="themeToggle"><span>🌑</span><span>☀️</span></button>
     <div class="container">
         <div class="card">
-            <h2>MOST USED</h2>
+            <h2>COMMONLY USED!</h2>
             <img src="calculators/minionProduction/images/compactor/yes.png" alt="Calculator Tool">
             <h3>Minion Calculator</h3>
             <p>Perform basic and advanced minion calculations with ease.</p>
