--- a/index.html
+++ b/index.html
@@ -19,19 +19,25 @@
             <h2>COMMONLY USED!</h2>
             <img src="calculators/minionProduction/images/compactor/yes.png" alt="Calculator Tool">
             <h3>Minion Calculator</h3>
-            <p>Perform basic and advanced minion calculations with ease.</p>
+            <p>Select minion types, tiers, fuels, and other upgrades to get detailed production estimates, with possible income</p>
             <a href="calculators/minionProduction/">Open Tool</a>
         </div>
         <div class="card">
-            <img src="calculators/images/Emerald_Chestplate.png" alt="Emerald Armor Ability Calculator" style="image-rendering:initial;"><!--img from wiki lol-->
+            <img src="calculators/images/Emerald_Chestplate.png" alt="Emerald Armor Ability Calculator" style="image-rendering:initial;">
             <h3>Emerald Armor Ability Calculator</h3>
-            <p>Find out how much bonus Health you will get from the ability of Emerald Armor depending on your Emerald collection.</p>
+            <p>Calculate your Emerald Armor bonus based on your Emerald collection</p>
             <a href="calculators/emeraldArmor.html">Open Tool</a>
+        </div>
+        <div class="card">
+            <img src="calculators/minionProduction/images/minions/combat/blaze.png" alt="Blaze Armors Ability Calculator" style="image-rendering:initial;">
+            <h3>Blazing Aura Ability Calculator</h3>
+            <p>Calculate your Blaze Armor or Frozen Blaze Armor bonus based on your Blaze Rod collection.</p>
+            <a href="calculators/blazingAura.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/Emerald_Blade.png" alt="Emerald blade">
             <h3>Emerald Blade Damage Calculator</h3>
-            <p>Find out how much bonus Damage you will get from the ability of Emerald Blade depending on the amount of coins in your purse.</p>
+            <p>Calculate your Emerald Blade bonus based on the amount of coins in your purse.</p>
             <a href="calculators/emeraldBlade.html">Open Tool</a>
         </div>
         <div class="card">
@@ -43,19 +49,19 @@
         <div class="card">
             <img src="calculators/images/Ultimate_Beetroot_Candy.png" alt="Pet level Calculator">
             <h3>Pet Level Calculator</h3>
-            <p>Calculate how much pet XP you need for your pet to get to your target level.</p>
+            <p>Calculate your pet's level to increase</p>
             <a href="calculators/petLevel.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/raiderAxe.png" alt="Raider axe Calculator">
             <h3>Raider Axe Calculator</h3>
-            <p>Find out how much bonus Strength you will get from the ability of Raider Axe depending on your wood collections.</p>
+            <p>Calculate your Raider Axe bonus based on your log collections.</p>
             <a href="calculators/experience.html">Open Tool</a>
         </div>
         <div class="card">
             <img src="calculators/images/Zombie_Chestplate.png" alt="Zombie bulwark">
-            <h3>Zombie Armor Calculator</h3>
-            <p>Calculate how much defense you will get from the ability of Zombie Armor.</p>
+            <h3>Zombie Bulwark Calculator</h3>
+            <p>Calculate your Revenant Armor or Reaper Armor bonus based on your Rotten Flesh collection.</p>
             <a href="calculators/zombieBulwark.html">Open Tool</a>
         </div>
     </div>
