--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>CraftersMC Calculators</h1>
         <p>Calculate various things for CraftersMC SkyBlock!</p>
-        <p style="font-size: 0.5rem;">Developed by Peaw | Improved by TechonTheDev</p>
+        <p style="font-size: 0.5rem;">Developed by Peaw | Improved by Ndr, TechonTheDev</p>
     </header>
     <button id="themeToggle"><span>🌑</span><span>☀️</span></button>
     <div class="container">
